--- a/client-side/package.json
+++ b/client-side/package.json
@@ -20,7 +20,7 @@
     "daisyui": "^5.0.50",
     "dayjs": "^1.11.13",
     "framer-motion": "^12.23.12",
-    "libphonenumber-js": "^1.12.13",
+    "libphonenumber-js": "^1.12.15",
     "lucide-react": "^0.539.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -28,6 +28,7 @@
     "react-icons": "^5.5.0",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.27.0",
+  "exceljs": "^4.4.0",
     "world-countries": "^5.1.0",
     "xlsx": "^0.18.5",
     "zustand": "^5.0.7"
