--- a/server-side/package.json
+++ b/server-side/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "nodemon src/server.js",
     "build": "echo no-build",
-  "start": "node src/server.js",
-  "seed:courses": "node src/scripts/seedCourses.js"
+    "start": "node src/server.js",
+    "seed:courses": "node src/scripts/seedCourses.js"
   },
   "keywords": [],
   "author": "",
@@ -19,14 +19,13 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "exceljs": "^4.4.0",
-    "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
-    "mysql2": "^3.14.3",
-    "puppeteer": "^22.15.0",
     "mysql2": "^3.14.4",
+    "puppeteer": "^22.15.0",
     "sequelize": "^6.37.7",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "yargs": "^18.0.0"
   }
 }
